<resources>
    <string name="app_name">Global Operation Resistance Broadcast</string>
    <string name="NickNameButton_string">Изменить ник</string>
    <string name="gen_button_string">Генерировать</string>
    <string name="textView_string">Код в Base64</string>
    <string name="copy_button_string">Скопировать в буфер обмена</string>
    <string name="ok_string">OK</string>
    <string name="input_nick">Введите ник</string>
    <string name="cesarString">Закодировано Cesar</string>
</resources>